# haven

./: ahoje
codix/: .gitignore  start.sh  transcript
codix/fve/: input_program  make_hw_input.py  report.txt  start_gui.fdo  tcl_stacktrace.txt  test_parameters.sv  top_level.sv
codix/fve/covreport/: covsummary.html  legacy.html  testlist.html
codix/fve/env_lib/: env.sv  scoreboard.sv  sender.sv  sorter.sv
codix_new/: start.sh
codix_new/fve/: dut.sv  start_gui.tcl  test_parameters.sv  vsim_start_gui.sh
codix_new/fve/golden_model/: golden_model.svh
codix_new/fve/test_lib/: sv_test_pkg.sv  test.svh
codix_new/fve/xexes_full/: 19990407-1.c.xexe  20000402-1.c.xexe  20000412-2.c.xexe  20000412-6.c.xexe  20000503-1.c.xexe  20000603-1.c.xexe  20000605-1.c.xexe  20000706-1.c.xexe  20000722-1.c.xexe  20000726-1.c.xexe  20000801-1.c.xexe  20000808-1.c.xexe  20000819-1.c.xexe  20000917-1.c.xexe  20001013-1.c.xexe  20001017-1.c.xexe  20001017-2.c.xexe  20001024-1.c.xexe  20001108-1.c.xexe  20001121-1.c.xexe  20001228-1.c.xexe  20010924-1.c.xexe  20010925-1.c.xexe  20011019-1.c.xexe  20011126-2.c.xexe  20020127-1.c.xexe  20020413-1.c.xexe  20020508-1.c.xexe  20020508-2.c.xexe  20020529-1.c.xexe  20021010-2.c.xexe  20021011-1.c.xexe  20021219-1.c.xexe  20030105-1.c.xexe  20030120-2.c.xexe  20030307-1.c.xexe  20030313-1.c.xexe  20030324-1.c.xexe  20030401-1.c.xexe  20030903-1.c.xexe  (+395 more)
codix_new/vhdl/: codasip_memory_mem_t.vhd  codix_risc_platform_ca_configuration.vhd  d_ff_plain_t.vhd
codix_new/vhdl/codix_risc_ca_t/: codix_risc_ca_core_main_cond_compare_cond_compare_fu_semantics_t.vhd  codix_risc_ca_core_main_controller_main_fe_fe_controller_t.vhd  codix_risc_ca_core_main_controller_main_main_controller_t.vhd  codix_risc_ca_core_main_fe_fe_controller_semantics_t.vhd  codix_risc_ca_core_main_fnc_ctrl_0_1_condition_t.vhd  codix_risc_ca_core_main_id_id_controller_semantics_t.vhd  codix_risc_ca_core_main_instr_hw_jump_abs_instr_hw_instr_hw_0_semantics_t.vhd  codix_risc_ca_core_main_instr_hw_jump_ind_instr_hw_instr_hw_0_semantics_t.vhd  codix_risc_ca_core_main_instr_hw_ld_imm_instr_hw_instr_hw_0_semantics_t.vhd  codix_risc_ca_core_main_instr_hw_move_instr_hw_instr_hw_0_semantics_t.vhd  codix_risc_ca_core_main_instr_hw_system_instr_hw_instr_hw_0_semantics_t.vhd  codix_risc_ca_core_main_instr_hw_system_wr_instr_hw_instr_hw_0_semantics_t.vhd  codix_risc_ca_core_main_op_add_operation_instr_hw_0_return_t.vhd  codix_risc_ca_core_main_op_addadd_operation_instr_hw_0_return_t.vhd  (+42 more)
codix_new_orig/codix_risc_ia_vs_ca_fve/: coverage_merge.sh
combov2/comp/verification_core_codix/: Modules.tcl  (+2 more)
combov2/pkg/: combov2_user_const.vhd
software/libdpi_wrapper/: Makefile  libdpi_wrapper_pkg.c  libdpi_wrapper_pkg.h  libsze_read  libsze_read.c  libsze_write_program  libsze_write_program.c  sha.c.xexe.txt  sha.c.xexe_regs_gm.txt  sha_mem  zerolen-1.c.xexe.txt  zerolen-1.c.xexe_regs_gm.txt  zerolen-2.c.xexe.txt  zerolen-2.c.xexe_mem_gm.txt  zerolen-2.c.xexe_regs_gm.txt  zerolen1_mem
software/libsze2/: .gitattributes  Doxyfile  Makefile.in  common.c  configure  configure.in  index.txt  libsze2.h  libsze2.pc.in  libsze2.spec.in  private.h  read.c  write.c
software/libsze2/example/: Makefile  Makefile.conf  read  read.c  read_parse  read_parse.c  write  write.c
software/libsze2/html/: annotated.html  classes.html  common_8c.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_func.html  globals_vars.html  group__common.html  group__common__debug.html  group__common__filter.html  group__common__high__level.html  group__common__low__level.html  group__common__print__options.html  group__common__spaces.html  group__read.html  group__write.html  index.html  libsze2_8h.html  libsze2_8h_source.html  modules.html  private_8h.html  private_8h_source.html  read_8c.html  structszedata-members.html  structszedata.html  structszedata2__packet-members.html  structszedata2__packet.html  structszedata__lock-members.html  structszedata__lock.html  write_8c.html
software/libsze2/html/search/: all_63.js  all_64.js  all_68.js  all_6c.js  all_6e.js  all_70.js  all_72.js  all_73.js  all_77.js  classes_73.js  defines_73.js  enums_73.js  files_63.js  files_6c.js  files_70.js  functions_5f.js  functions_73.js  groups_63.js  groups_64.js  groups_66.js  groups_68.js  groups_6c.js  groups_70.js  groups_72.js  groups_77.js  search.js  variables_61.js  variables_63.js  variables_64.js  variables_68.js  variables_6c.js  variables_73.js
software/libsze2/sw-examples/: Makefile  Makefile.conf.in  README  configure.in
software/libsze2/sw-examples/combo/: Makefile  component.c  component.sh
software/libsze2/sw-examples/exampletool/: Makefile  exampletool.c
software/libsze2/sw-examples/pcap/: Makefile  read.c  write.c
software/libsze2/sw-examples/sze/: Makefile  read  read.c  read_parse  read_parse.c  write  write.c
software/libsze2/tools/sze2bufferdump/: Makefile.in  sze2buff_dump.c
software/libsze__wrapper/: Makefile  libsze_read  libsze_wrapper.c  libsze_wrapper.h  libsze_write  libsze_write.c  libsze_write_program  libsze_write_program.c
software/libsze_wrapper/: input_program_hex  input_program_hex_sha_now  input_program_hex_sha_pokusny  input_program_hex_zerolen1  input_program_hex_zerolen2  libsze_read  libsze_read.c  libsze_write  libsze_write_program  libsze_write_program.c  sha_novy  sha_novy_pokus_7_7  sha_novy_pokus_7_7_kr  start.sh  test  test1  test8_7  test8_7_zero1  test9_7a  zero_len_1_novy  zero_len_2_novy  zerolen1_ok
software/pragram_converter/: input_hex  input_program_hex  program  program_converter  program_converter.c  program_hex
software/pragram_del_num/: Makefile  program_converter  program_converter.c  sha.c.xexe.txt  sha.c.xexe.txt.hw.dbg  zerolen-1.c.xexe.txt  zerolen-1.c.xexe.txt.hw  zerolen-2.c.xexe.txt  zerolen-2.c.xexe.txt.hw
verifikace/codix_risc_ia_vs_ca_fve/: coverage_merge.sh  start.sh
verifikace/codix_risc_ia_vs_ca_fve-hw/fve/memory_loader/: CMakeLists.txt  compile.sh  libdpi_wrapper_pkg.cpp  libdpi_wrapper_pkg.sv
(+16305 files in other folders)
