#
# Copyright (c) 2011 CESNET
#
# LICENSE TERMS
#
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions
# are met:
# 1. Redistributions of source code must retain the above copyright
#    notice, this list of conditions and the following disclaimer.
# 2. Redistributions in binary form must reproduce the above copyright
#    notice, this list of conditions and the following disclaimer in
#    the documentation and/or other materials provided with the
#    distribution.
# 3. Neither the name of the Company nor the names of its contributors
#    may be used to endorse or promote products derived from this
#    software without specific prior written permission.
#
# ALTERNATIVELY, provided that this notice is retained in full, this
# product may be distributed under the terms of the GNU General Public
# License (GPL) version 2 or later, in which case the provisions
# of the GPL apply INSTEAD OF those given above.
#
# This software is provided ``as is'', and any express or implied
# warranties, including, but not limited to, the implied warranties of
# merchantability and fitness for a particular purpose are disclaimed.
# In no event shall the company or contributors be liable for any
# direct, indirect, incidental, special, exemplary, or consequential
# damages (including, but not limited to, procurement of substitute
# goods or services; loss of use, data, or profits; or business
# interruption) however caused and on any theory of liability, whether
# in contract, strict liability, or tort (including negligence or
# otherwise) arising in any way out of the use of this software, even
# if advised of the possibility of such damage.
#
# $Id$
#

AC_PREREQ([2.63])

# Process this file with autoconf to produce a configure script.
AC_INIT([libsze2], m4_esyscmd([cut -f1 ./VERSION | tr -d '\n']))

PACKAGE_VERSION=`cut -f1 ./VERSION | tr -d '\n'`
AC_SUBST(PACKAGE_VERSION)

RELEASE=1
AC_SUBST(RELEASE)

USERNAME=`git config --get user.name`
USERMAIL=`git config --get user.email`
AC_SUBST(USERNAME)
AC_SUBST(USERMAIL)

CONFIGURE_PWD=`pwd`
AC_SUBST(CONFIGURE_PWD)

# Check for pkg-config.
AC_PATH_PROG(PKG_CONFIG, pkg-config, no)
if test "x$PKG_CONFIG" = "xno"; then
	AC_MSG_ERROR(['pkgconfig' not found.])
fi

AC_ARG_WITH([distro],
	AC_HELP_STRING([--with-distro=DISTRO],[Compile for specific Linux distribution]),
	DISTRO=$withval,
	DISTRO=redhat
)

############################ Check for programs ################################

# in case of cross-compilation, try to gues cross-compiler if not set
if test "x$target" != "x$host" -a -z "`echo $CC | grep -e '-gcc'`";
then
  AC_MSG_CHECKING(for cross-compiler)

  which ${program_prefix}gcc >/dev/null 2>&1 && CC=${program_prefix}gcc
  which ${target_cpu}-${target_os}-gcc >/dev/null 2>&1 \
  && CC=${target_cpu}-${target-os}-gcc
  which ${target_cpu}-${target_vendor}-${target_os}-gcc >/dev/null 2>&1 \
  && CC=${target_cpu}-${target_vendor}-${target_os}-gcc

  AC_MSG_RESULT($CC)
fi

# Check for architecture, only x86 and x86_64 are supported
if test -z "$target_cpu";
then
	AC_CHECK_PROG([UNAME], [uname], [yes], [no])
	if test "$UNAME" = "no"; then
		AC_MSG_ERROR(["uname not found!"])
	fi
	target_cpu=`uname -m`
fi
AC_MSG_CHECKING([for host architecture])
case $target_cpu in
    i?86 )
	AC_MSG_RESULT($target_cpu)
	;;
    x86_64 )
	libdir='${prefix}/lib64'
	AC_MSG_RESULT($target_cpu)
        ;;
    * )
        AC_MSG_ERROR([unsupported architecture $target_cpu])
        ;;
esac


# Check for doxygen
AC_CHECK_PROG(DOXYGEN, doxygen, doxygen)

# Check for rpmbuil
AC_CHECK_PROG(RPMBUILD, rpmbuild, rpmbuild)

# Check for standard programs
AC_PROG_CC
AC_PROG_LN_S
AC_PROG_INSTALL

############################ Check for libraries ###############################
export PKG_CONFIG_PATH=/usr/local/${libdir##*/}/pkgconfig:$PKG_CONFIG_PATH

# libcommlbr
AC_ARG_WITH([libcommlbr],
	AC_HELP_STRING([--with-libcommlbr=PATH],[Set the path to libcommlbr (usually local GIT repository)]),
	[# local copy of libcommlbr GIT repo with headers and binaries
	LIBCOMMLBR_CFLAGS="-I$withval"
	LIBCOMMLBR_LIBS="-L$withval -lcommlbr"],
	[# get info from pkg-config about installed package
	PKG_CHECK_MODULES(LIBCOMMLBR, libcommlbr >= 2.0.0)]
)
CPPFLAGS="$CPPFLAGS $LIBCOMMLBR_CFLAGS"
LIBS="$LIBS $LIBCOMMLBR_LIBS"
AC_SUBST([LIBCOMMLBR_LIBS])
AC_SUBST([LIBCOMMLBR_CFLAGS])
BUILDREQS="$BUILDREQS libcommlbr-devel >= 2.0.0"
REQS="$REQS libcommlbr >= 2.0.0"

###################### Check for configure parameters ##########################

######################### Checks for header files ##############################
AC_CHECK_HEADERS([arpa/inet.h fcntl.h stdint.h stdlib.h string.h sys/ioctl.h unistd.h])

# COMBO drivers (combo-driver-devel package)
AC_ARG_WITH([drivers],
	AC_HELP_STRING([--with-drivers=PATH],[Set the path to driver headers (szedata2.h)]),
	[# local file
	CPPFLAGS="$CPPFLAGS -I$withval"],
	[# placed in the system path
	CPPFLAGS="$CPPFLAGS -I/usr/include/linux/combo/"]
	[AC_CHECK_HEADERS([szedata2.h],[],[AC_MSG_ERROR([szedata2.h not found!])])]
)

######## Checks for typedefs, structures, and compiler characteristics #########
AC_HEADER_STDBOOL
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINT8_T

######################## Checks for library functions ##########################
AC_FUNC_MALLOC
AC_FUNC_MMAP
AC_CHECK_FUNCS([memset munmap])

############################### Set output #####################################
AC_SUBST(V_SHLIB_CMD)
AC_SUBST(V_SHLIB_OPT)
AC_SUBST(V_SONAME_OPT)
AC_SUBST(BUILDREQS)
AC_SUBST(REQS)
AC_SUBST(DISTRO)


AC_SUBST(DOXYGEN)
if test -z "$DOXYGEN"; then
	AC_MSG_WARN([Due to missing doxygen you will not able to generate Doxygen documentation.])
fi

AC_SUBST(RPMBUILD)
if test -z "$RPMBUILD"; then
	AC_MSG_WARN([Due to missing rpmbuild you will not able to generate RPM package.])
fi

AC_OUTPUT(Makefile libsze2.spec libsze2.pc tools/sze2bufferdump/Makefile)
